--- a/src/app/pages/discover/discover/discover.page.html
+++ b/src/app/pages/discover/discover/discover.page.html
@@ -61,5 +61,5 @@
 </ion-header>
 
 <ion-content>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-router-outlet [swipeGesture]="false"></ion-router-outlet>
 </ion-content>
