improving calix's code
1.8.12 (3)

--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -151,5 +151,6 @@
 </ion-header>
 
 <ion-content *ngIf="resource && resource._id && moment.resource && moment.resource.field" forceOverscroll="false">
-  <ion-router-outlet name="chat"></ion-router-outlet>
+  <ion-router-outlet></ion-router-outlet>
+  <ion-router-outlet name="sub"></ion-router-outlet>
 </ion-content>
