--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -8,65 +8,73 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header *ngIf="categoryId !== '5c915476e172e4e64590e349'"> <!--non Plan child Activities-->
-      <ion-label>New {{this.categoryLabel}} (Available in Library)</ion-label>
-    </ion-list-header>
-    <ion-list-header *ngIf="categoryId === '5c915476e172e4e64590e349' && moment.categories.includes('5dfdbb547b00ea76b75e5a70')"> <!--Plan shown in Relationship-->
-      <ion-label>Adopted {{this.categoryLabel}}</ion-label>
-    </ion-list-header>
-    <ion-list-header *ngIf="categoryId === '5c915476e172e4e64590e349' && !moment.categories.includes('5dfdbb547b00ea76b75e5a70')"> <!--Plan shown in non-Relationship-->
-      <ion-label>Available {{this.categoryLabel}}</ion-label>
-    </ion-list-header>
-    <ion-grid class="program-grid">
-      <ion-row class="program-row">
-        <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3">
-          <ion-card class="program-card" (click)="chooseChildActivity()" id="create-new-moment">
-            <ion-card-header class="ion-no-padding" color="lightgrey">
-              <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
-                <ion-icon name="add" color="darkgrey"></ion-icon>
-              </ion-row>
-            </ion-card-header>
-            <div class="program-name dark">Add</div>
-          </ion-card>
-        </ion-col>
-        <ion-col class="ion-align-self-center" *ngFor="let sample of samples; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!((sample.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || sample.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && sample.array_boolean[1])">
-          <ion-card class="program-card" (click)="openChildActivity($event, sample)">
-            <ion-card-header class="ion-no-padding">
-              <div class="program-photo-container">
-                <ion-img class="program-photo" [src]="(sample.assets && sample.assets.length && sample.assets[0]) | background: sample._id"></ion-img>
-              </div>
-            </ion-card-header>
-            <div class="program-type"><ion-badge color="button1">{{sample.resource['en-US'].value[0]}}</ion-badge></div>
-            <div class="program-name light">{{sample.matrix_string[0][0]}}</div>
-            <!--<ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openActivity($event, sample)" fill="clear" size="small">
-              <ion-icon name="information-circle-outline" color="secondary"></ion-icon>
-            </ion-button>-->
-            <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="removeActivity($event, sample)" fill="clear" size="small" *ngIf="categoryId === '5c915476e172e4e64590e349'">
-              <ion-icon name="close" color="primary"></ion-icon>
-            </ion-button>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-    <ion-list-header *ngIf="categoryId !== '5c915476e172e4e64590e349'"> <!--Only show for non-Plan child Activities-->
-      <ion-label>All {{this.categoryLabel}}</ion-label>
-    </ion-list-header>
-    <ion-grid class="program-grid">
-      <ion-row class="program-row">
-        <ion-col class="ion-align-self-center" *ngFor="let sample of samples; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!((sample.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || sample.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && !sample.array_boolean[1])">
-          <ion-card class="program-card" (click)="openChildActivity($event, sample)">
-            <ion-card-header class="ion-no-padding">
-              <div class="program-photo-container">
-                <ion-img class="program-photo" [src]="(sample.assets && sample.assets.length && sample.assets[0]) | background: sample._id"></ion-img>
-              </div>
-            </ion-card-header>
-            <div class="program-type"><ion-badge color="button1">{{sample.resource['en-US'].value[0]}}</ion-badge></div>
-            <div class="program-name light">{{sample.matrix_string[0][0]}}</div>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-list>
-
+  <ion-grid class="full-height">
+    <ion-row class="full-height">
+      <ion-col class="full-height" size-xs="12" size-sm="12" size-md="8" size-lg="8">
+        <ion-list>
+          <ion-list-header *ngIf="categoryId !== '5c915476e172e4e64590e349'"> <!--non Plan child Activities-->
+            <ion-label>New {{this.categoryLabel}} (Available in Library)</ion-label>
+          </ion-list-header>
+          <ion-list-header *ngIf="categoryId === '5c915476e172e4e64590e349' && moment.categories.includes('5dfdbb547b00ea76b75e5a70')"> <!--Plan shown in Relationship-->
+            <ion-label>Adopted {{this.categoryLabel}}</ion-label>
+          </ion-list-header>
+          <ion-list-header *ngIf="categoryId === '5c915476e172e4e64590e349' && !moment.categories.includes('5dfdbb547b00ea76b75e5a70')"> <!--Plan shown in non-Relationship-->
+            <ion-label>Available {{this.categoryLabel}}</ion-label>
+          </ion-list-header>
+          <ion-grid class="program-grid">
+            <ion-row class="program-row">
+              <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3">
+                <ion-card class="program-card" (click)="chooseChildActivity()" id="create-new-moment">
+                  <ion-card-header class="ion-no-padding" color="lightgrey">
+                    <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
+                      <ion-icon name="add" color="darkgrey"></ion-icon>
+                    </ion-row>
+                  </ion-card-header>
+                  <div class="program-name dark">Add</div>
+                </ion-card>
+              </ion-col>
+              <ion-col class="ion-align-self-center" *ngFor="let sample of samples; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!((sample.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || sample.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && sample.array_boolean[1])">
+                <ion-card class="program-card" (click)="openChildActivity($event, sample)">
+                  <ion-card-header class="ion-no-padding">
+                    <div class="program-photo-container">
+                      <ion-img class="program-photo" [src]="(sample.assets && sample.assets.length && sample.assets[0]) | background: sample._id"></ion-img>
+                    </div>
+                  </ion-card-header>
+                  <div class="program-type"><ion-badge color="button1">{{sample.resource['en-US'].value[0]}}</ion-badge></div>
+                  <div class="program-name light">{{sample.matrix_string[0][0]}}</div>
+                  <!--<ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openActivity($event, sample)" fill="clear" size="small">
+                    <ion-icon name="information-circle-outline" color="secondary"></ion-icon>
+                  </ion-button>-->
+                  <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="removeActivity($event, sample)" fill="clear" size="small" *ngIf="categoryId === '5c915476e172e4e64590e349'">
+                    <ion-icon name="close" color="primary"></ion-icon>
+                  </ion-button>
+                </ion-card>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <ion-list-header *ngIf="categoryId !== '5c915476e172e4e64590e349'"> <!--Only show for non-Plan child Activities-->
+            <ion-label>All {{this.categoryLabel}}</ion-label>
+          </ion-list-header>
+          <ion-grid class="program-grid">
+            <ion-row class="program-row">
+              <ion-col class="ion-align-self-center" *ngFor="let sample of samples; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!((sample.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || sample.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && !sample.array_boolean[1])">
+                <ion-card class="program-card" (click)="pushToMessagePage($event, sample)">
+                  <ion-card-header class="ion-no-padding">
+                    <div class="program-photo-container">
+                      <ion-img class="program-photo" [src]="(sample.assets && sample.assets.length && sample.assets[0]) | background: sample._id"></ion-img>
+                    </div>
+                  </ion-card-header>
+                  <div class="program-type"><ion-badge color="button1">{{sample.resource['en-US'].value[0]}}</ion-badge></div>
+                  <div class="program-name light">{{sample.matrix_string[0][0]}}</div>
+                </ion-card>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-list>
+      </ion-col>
+      <ion-col size-xs="0" size-sm="0" size-md="4" size-lg="4" class="ion-no-padding">
+        <ion-router-outlet></ion-router-outlet>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
