got secondary route working
1.8.12 (3)

--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -17,7 +17,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
+Group Chat
 <ion-content *ngIf="chatService.currentChatProps[propIndex]">
   <!--This is the Chat page-->
   <!--get new data when page is refreshed-->
