--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-split-pane contentId="main-app" [when]="userData.splitPaneState" [ngClass]="{'split-pane-narrow': router.url.includes('sub') && chatService.currentChatProps?.length && platform.width() >= 768 }">
+  <ion-split-pane contentId="main-app" [when]="userData.splitPaneState" id="split-pane">
     <ion-menu menuId="main" side="start" contentId="main-app" mode="md" type="overlay">
       <ion-content>
         <ion-toolbar class="title-container" id="main-menu-toolbar">
@@ -91,5 +91,5 @@
     </ion-menu>
     <ion-router-outlet id="main-app" [swipeGesture]="false"></ion-router-outlet>
   </ion-split-pane>
-  <ion-router-outlet name="sub" id="sub-panel" *ngIf="router.url.includes('sub') && chatService.currentChatProps?.length && platform.width() >= 768"></ion-router-outlet>
+  <ion-router-outlet name="sub" id="sub-panel"></ion-router-outlet>
 </ion-app>
