--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -116,45 +116,45 @@
 
 <ion-header *ngIf="resource && resource._id && moment.resource && moment.resource.field" no-border>
   <ion-slides [options]="{slidesPerView: 6, grabCursor: true, updateOnWindowResize: true}">
-    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'insight')}">
+    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'insight')}" class="ion-no-padding">
       <ion-card (click)="clickManageMenu('insight', null)">
         <ion-icon slot="start" name="person" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>Insight</ion-label>
       </ion-card>
     </ion-slide>
-    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'profile')}">
+    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'profile')}" class="ion-no-padding">
       <ion-card (click)="clickManageMenu('profile', null)">
         <ion-icon slot="start" name="clipboard" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label *ngIf="moment && moment.categories && !moment.categories.includes('5c915476e172e4e64590e349')">Profile</ion-label>
         <ion-label [ngClass]="{ 'selected': (selectedMenuOption === 'profile')}" *ngIf="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">Plan</ion-label>
       </ion-card>
     </ion-slide>
-    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'people')}">
+    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'people')}" class="ion-no-padding">
       <ion-card (click)="clickManageMenu('people', null)">
         <ion-icon slot="start" name="people" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>People</ion-label>
       </ion-card>
     </ion-slide>
-    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'groups')}" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))">
+    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'groups')}" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))" class="ion-no-padding">
       <ion-card (click)="clickManageMenu('groups', null)">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>Groups</ion-label>
       </ion-card>
     </ion-slide>
-    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'mentoring')}" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))">
+    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'mentoring')}" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))" class="ion-no-padding">
       <ion-card (click)="clickManageMenu('mentoring', null)">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>Mentoring</ion-label>
       </ion-card>
     </ion-slide>
-    <ion-slide *ngIf="moment && moment.categories && moment.categories.includes('5c915324e172e4e64590e346')"  [ngClass]="{ 'selected': (selectedMenuOption === 'programs')}">
+    <ion-slide *ngIf="moment && moment.categories && moment.categories.includes('5c915324e172e4e64590e346')"  [ngClass]="{ 'selected': (selectedMenuOption === 'programs')}" class="ion-no-padding">
       <ion-card (click)="clickManageMenu('programs', null)">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>Programs</ion-label>
       </ion-card>
     </ion-slide>
     <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'plans')}">
-      <ion-card (click)="clickManageMenu('plans', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">
+      <ion-card (click)="clickManageMenu('plans', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" class="ion-no-padding">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>Plans</ion-label>
       </ion-card>
