got secondary route working
1.8.12 (3)

--- a/src/app/pages/group/groupchat/groupchat.page.scss
+++ b/src/app/pages/group/groupchat/groupchat.page.scss
@@ -1,7 +1,13 @@
 app-groupchat {
 
+  height: 100%;
+
   ion-infinite-scroll {
     //background: transparent; TODO: trying to make infinite-scroll background transparent in dark mode
+  }
+
+  ion-content {
+    height: 100%;
   }
 
   .titles {
