--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,15 @@
 app-root {
 
-  #split-pane {
-    width: 80%;
+  .split-pane-narrow {
+    width: 70%;
+    border-right: var(--border);
   }
 
   #sub-panel {
-    width: 20%;
+    width: 30%;
     position: absolute;
     top: 0;
-    left: 80%;
-  }
-
-  ion-router-outlet {
-    height: 100%;
+    left: 70%;
   }
 
   ion-item {
