--- a/src/app/pages/feature/editfeature/editfeature.page.html
+++ b/src/app/pages/feature/editfeature/editfeature.page.html
@@ -341,11 +341,11 @@
           </ion-item>
           <ion-item lines="none"> <!--To-Do Label-->
             <ion-label class="ion-margin-left">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][14]}}</ion-label>
-            <ion-input class="ion-text-end" type="text" maxlength="8" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][15]" [(ngModel)]="moment.matrix_string[i][2]"></ion-input>
+            <ion-input class="ion-text-end" type="text" maxlength="8" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][15]" [(ngModel)]="moment.matrix_string[i][2]" (ionChange)="moment.matrix_string[i][2] = moment.matrix_string[i][2] || resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][15]" debounce="50"></ion-input>
           </ion-item>
           <ion-item lines="none"> <!--To-Do Moment Id-->
             <ion-label class="ion-margin-left">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][16]}}</ion-label>
-            <ion-input class="ion-text-end" type="text" maxlength="24" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][17]" [(ngModel)]="moment.matrix_string[i][3]"></ion-input>
+            <ion-input class="ion-text-end" type="text" maxlength="24" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][17]" [(ngModel)]="moment.matrix_string[i][3]" (ionChange)="moment.matrix_string[i][3] = moment.matrix_string[i][3] || resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][17]" debounce="50"></ion-input>
           </ion-item>
           <ion-item lines="none"> <!--Allow unauthenticated access to To-Do's Content-->
             <ion-label>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][23]}}</ion-label>
