bug fix: repopulate timeline
1.8.12 (3)

--- a/src/app/pages/feature/createfeature/createfeature.page.html
+++ b/src/app/pages/feature/createfeature/createfeature.page.html
@@ -30,7 +30,7 @@
         <ion-row class="ion-justify-content-center ion-align-items-center slide-row">
           <ion-col class="ion-align-self-center">
             <ion-item lines="none">
-              <div style="font-size: 14px" class="ion-text-wrap">Choose Programs for Your Community:</div>
+              <div style="font-size: 14px" class="ion-text-wrap">Add a Program to Your Community:</div>
             </ion-item>
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
