--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
@@ -11,8 +11,8 @@ app-feature-schedule {
   }
 
   .moment-input {
-    width: 90%;
-    float: left;
+    //width: 90%;
+    //float: left;
     opacity: 0.5;
     padding: 5px 0;
   }
@@ -52,8 +52,8 @@ app-feature-schedule {
   }
 
   .content-count {
-    padding-left: 2%;
-    width: 8%;
+    margin: 0 10px;
+    width: 20px;
   }
 
   .content-date {
