--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -34,6 +34,8 @@ app-dashboard {
     margin-top: 3px !important;
   }
 
+
+
   .message-container {
     width: 100%;
   }
@@ -83,7 +85,6 @@ app-dashboard {
     font-weight: bold;
     color: var(--ion-color-secondary);
   }
-
 
   .current-date-display {
     display: inline-block;
@@ -441,42 +442,50 @@ app-dashboard {
   }
 
   .person-card {
-    max-width: 300px;
-    width: 80%;
+    width: 100%;
     height: 100%;
     //max-height: 200px;
     object-fit: contain;
-    margin: 0 12px;
+    margin: 0;
+		display: flex;
 
-    // Added the slant pattern!
-    .top-pattern {
-      position: absolute;
-      top: 0;
-      height: 15%;
-      width: 100%;
-      background-color: #62bebf;
-      z-index: -1;
-    }
+		.person-photo-container {
+			height: 100%;
+			width: 35%;
+			margin: 10px 10px 10px 10px;
 
-    .middle-pattern {
-      position: absolute;
-      top: 15%;
-      height: 50%;
-      width: 100%;
-      border-style: solid;
-      border-width: 0 1300px 500px 0;
-      border-color: transparent #62bebf transparent transparent;
-      z-index: -1;
-    }
+			.person-avatar {
+				object-fit: cover;
+				border-radius: 50%;
+				width: 120px;
+				height: 120px;
+				max-width: 100px;
+				max-height: 100px;
+			}
 
-    .bottom-pattern {
-      position: absolute;
-      top: 0;
-      height: 100%;
-      width: 100%;
-      background-color: var(--ion-color-light);
-      z-index: -2;
-    }
+		}
+
+		.rhs {
+			margin: 10px 10px 10px 10px;
+			height: 100%;
+
+			.person-content-right {
+		    margin: 0 0 21px 0;
+		    width: 100%;
+		    height: 42px;
+		    //max-height: 72px;
+		    line-height: 14px; /* Height / no. of lines to display */
+		    overflow: hidden;
+		    font-size: 12px;
+		    color: var(--ion-color-darkgrey);
+		  }
+
+			.person-name {
+		    font-size: 24px;
+				color: black;
+				font-weight: bold;
+		  }
+		}
   }
 
   .person-content {
@@ -489,17 +498,6 @@ app-dashboard {
     --background: transparent;
   }
 
-  .person-content-left {
-    margin: 8px 12.5px 21px 0;
-    width: 40%;
-    height: 44px;
-    line-height: 100%;
-  }
-
-  .person-name {
-    font-size: 14px;
-  }
-
   .person-title {
     font-size: 12px;
     overflow: hidden;
@@ -508,18 +506,6 @@ app-dashboard {
 
   .content-border {
     border-left: 0.5px solid #979797;
-  }
-
-  .person-content-right {
-    padding-left: 12.5px;
-    margin: 10px 0 21px 0;
-    width: 60%;
-    height: 42px;
-    //max-height: 72px;
-    line-height: 14px; /* Height / no. of lines to display */
-    overflow: hidden;
-    font-size: 12px;
-    color: var(--ion-color-darkgrey);
   }
 
   .section {
