--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -479,21 +479,57 @@ app-dashboard {
     }
   }
 
+  // intern challenge
+  .person-photo-container {
+    border-radius: 50%;
+    overflow: hidden;
+    width: 100px;
+    height: 100px;
+  }
+
+  .person-photo {
+    width: 100px;
+    height: 100px;
+  }
+
   .person-content {
-    height: 75px;
-    overflow: scroll;
+    // height: 75px;
+    // overflow: scroll;
     --background: var(--ion-color-light);
+    width: 100%;
   }
 
   .person-content-item {
     --background: transparent;
+    margin: auto 0;
   }
 
-  .person-content-left {
-    margin: 8px 12.5px 21px 0;
+  .person-content-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding-right: 20px;
+  }
+
+  .person-content-top {
+    // margin: 8px 12.5px 21px 0;
     width: 40%;
-    height: 44px;
+    // height: 44px;
     line-height: 100%;
+    font-weight: bolder;
+    color: var(--ion-color-darkgrey);
+  }
+
+  .person-card {
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
+    // max-height: 200px;
+    object-fit: contain;
+    margin: 0;
+    display: flex;
   }
 
   .person-name {
@@ -503,23 +539,32 @@ app-dashboard {
   .person-title {
     font-size: 12px;
     overflow: hidden;
-    color: var(--ion-color-darkgrey);
   }
 
   .content-border {
     border-left: 0.5px solid #979797;
   }
 
-  .person-content-right {
-    padding-left: 12.5px;
-    margin: 10px 0 21px 0;
+  .person-content-mid {
+    // padding-left: 12.5px;
+    margin: 10px 0 12px 0;
     width: 60%;
-    height: 42px;
+    // height: 42px;
     //max-height: 72px;
     line-height: 14px; /* Height / no. of lines to display */
     overflow: hidden;
     font-size: 12px;
     color: var(--ion-color-darkgrey);
+  }
+
+  .person-content-edit {
+    width: calc(100% - 2px);
+    max-width: 200px;
+    border-radius: 20px;
+    border: 1px solid #F65374;
+    font-size: 10px;
+    color: #F65374;
+    text-transform: capitalize;
   }
 
   .section {
