--- a/src/app/pages/group/groupchat/groupchat.page.scss
+++ b/src/app/pages/group/groupchat/groupchat.page.scss
@@ -7,7 +7,8 @@ app-groupchat {
   }
 
   ion-content {
-    height: 100%;
+    //height: 100%;
+    max-height: calc(100% - 116px);
   }
 
   .titles {
@@ -57,7 +58,7 @@ app-groupchat {
 
   .chat-list {
     padding-top: 5%;
-    min-height: 100%;
+    //min-height: 100%;
   }
 
   //time stamp
@@ -501,7 +502,6 @@ app-groupchat {
     bottom: 10px;
     right: 8px;
     font-size: 15px;
-    
   }
 
 
@@ -510,7 +510,6 @@ app-groupchat {
   }
 
   .message-form {
-
     display: flex;
     border-color: var(--ion-color-lightgrey);
     border-style: solid;
